--- a/FinappDiscord/FinappDiscord.csproj
+++ b/FinappDiscord/FinappDiscord.csproj
@@ -9,8 +9,13 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.18.0" />
+    <PackageReference Include="FinappCore.Database" Version="1.0.2" />
+    <PackageReference Include="FinappCore.Models" Version="1.0.2" />
+    <PackageReference Include="FinappCore.Repos" Version="1.0.2" />
+    <PackageReference Include="FinappCore.Services" Version="1.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.10" />
   </ItemGroup>
 
